# routes/user.ts
@@ -1,4 +1,4 @@
-import { Roles } from './../roles';
+import { Roles } from '../roles';
 import { Router } from 'express';
 import authCtrl from '../controllers/auth.controller';
 import userCtrl from '../controllers/user.controller';
@@ -16,11 +16,6 @@ router
     .post(
         '/:id',
         authCtrl.checkAuth('required'),
-        upload.fields([
-            { name: 'avatar_url', maxCount: 1 },
-            { name: 'background_image_url', maxCount: 1 },
-        ]),
-        fileController.uploadToRemoteServer,
         userCtrl.update
     )
     .post('/:id/follow/', authCtrl.checkAuth('required'), userCtrl.follow)
